--- a/manifest.plist
+++ b/manifest.plist
@@ -29,9 +29,9 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.dongyue.zebraedu</string>
+				<string>string $bundleId</string>
 				<key>bundle-version</key>
-				<string>2.0.24</string>
+				<string>string $version</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
