--- a/manifest_test.plist
+++ b/manifest_test.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://192.168.0.114/app/ipa/debug/app.ipa</string>
+					<string>http://192.168.0.114/app/ipa/app.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -29,9 +29,9 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>string $bundleId</string>
+				<string>com.dongyue.zebraedu.dev</string>
 				<key>bundle-version</key>
-				<string>string $version</string>
+				<string>2.0.24</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
